clusters/wrtk8s/monitoring/poditlater-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: poditlater-tailscale
  namespace: monitoring
  annotations:
    tailscale.com/tailnet-ip: "100.103.110.56"
spec:
  type: ExternalName
  externalName: placeholder
