clusters/wrtk8s/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.jgarr.net
    external-dns.alpha.kubernetes.io/target: 10.1.1.152
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - grafana.jgarr.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
