clusters/wrtk8s/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: grafana.jgarr.net
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.jgarr.net
      secretName: grafana-tls
  rules:
    - host: grafana.jgarr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
